			CHANGELOG for KAME kit

$Id: CHANGELOG,v 1.205 1999/10/21 15:42:41 itojun Exp $

<199910>
Thu Oct 21 08:40:24 PDT 1999  itojun@iijlab.ne
	* netbsd/sys/netinet/udp_usrreq.c: advanced API has been broken for
	  IPv6 UDP due to a one-letter typo.  it is now fixed.

Thu Oct 21 07:57:02 PDT 1999  itojun@iijlab.net
	* netbsd/pkgsrc/net/ucd-snmp: upgrade to 4.0.1 with IPv6 fixes.

1999-10-21  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* *bsd*/usr.sbin/traceroute/Makefile: added OS-specific
	compilation options, one of which would fix a problem of bad
	checksums for probe packets.

Thu Oct 21 15:12:16 JST 1999 skane@ydc.co.jp
	* kame/kame/racoon:
	Make it compilable on INRIA stack.
	Patch from <Francis.Dupont@inria.fr>.

Wed Oct 20 23:05:52 PDT 1999  itojun@iijlab.net
	* freebsd2/lib/libftpio: fix getaddrinfo() loop, so that the code
	  will try to explore all the addresses returned after query.

Wed Oct 20 09:01:53 PDT 1999  itojun@iijlab.net
	* netbsd/pkgsrc/net/wu-ftpd: upgrade to 2.5.0 with IPv6 patch.

Thu Oct 21 00:19:23 JST 1999 sakane@ydc.co.jp
	* kame/kame/libipsec:
	Improved IPsec policy parser.  Following requests are allowed:
		protocol/mode/src-dst/level
		protocol/mode/src-dst
		protocol/mode/src-dst/
		protocol/transport
		protocol/transport//level
	See policy_parse.y for detail.

Wed Oct 20 20:13:50 1999  SUMIKAWA Munechika  <sumikawa@ebina.hitachi.co.jp>
	* freebsd[23]/ports/ncftp3, netbsd/pkgsrc/net/ncftp3: upgrade to
	3.0 beta 21.

1999-10-20  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/ndp/ndp.c (dump): enabled the NI_WITHSCOPEID flag for
	getnameinfo when printing a neighbor cache entry for a link-local
	scope address. So, for example, `ndp -an' would provide the
	following result:
	Neighbor                      Linklayer Address
        fe80::210:4bff:fe32:93d1@ef0  0:10:4b:32:93:d1
        fe80::210:5aff:fe5c:6b5c@ef0  0:10:5a:5c:6b:5c
        fe80::2a0:24ff:fe66:1350@ef0  0:a0:24:66:13:50